--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS
+title: The Quiet Explorer
+description: Saddam's Blog
 
 url: https://long-haul.netlify.app
 # Only necessary when hosting your site in a sub-directory. Project sites hosted on GitHub Pages are the common use-case of this variable.
@@ -21,19 +21,15 @@ paginate: 5
 navigation:
     - title: Home
       url: /index.html
-    - title: About
-      url: /about
-    - title: Contact
-      url: /contact
-
+      
 social:
-    github: brianmaierjr
-    twitter: brianmaierjr
-    facebook: brianmaierjr
-    email: brimaidesigns@gmail.com
-    linkedin: brianmaierjr
-    youtube: RickAstleyYT
-    tumblr: i-am-a-fish
+    github: saddhussein
+    twitter: saddamaddas
+    # facebook: brianmaierjr
+    email: email.saddamh@gmail.com
+    linkedin: saddam-hussein
+    #youtube: RickAstleyYT
+    #tumblr: i-am-a-fish
 
 google_analytics: "UA-58263416-1"
 
